Logging macros are sensitive to pal/Logging.h vs Logging.h include order https://bugs.webkit.org/show_bug.cgi?id=185893

Reviewed by Zalan Bujtas.

Remove unused functionality from pal/Logging code until we need it. Primarily this removes the
#define LOG_CHANNEL_PREFIX from pal/Logging.h, which caused include-order problems with unified sources.

Future work should move shared logging code up to WTF (or into PAL).

* PAL.xcodeproj/project.pbxproj:
* pal/CMakeLists.txt:
* pal/LogInitialization.h: Removed.
* pal/Logging.cpp:
(PAL::isLogChannelEnabled): Deleted.
(PAL::setLogChannelToAccumulate): Deleted.
(PAL::initializeLogChannelsIfNecessary): Deleted.
* pal/Logging.h:
* pal/cocoa/LoggingCocoa.mm: Removed.


Canonical link: https://commits.webkit.org/201731@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232550 268f45cc-cd09-0410-ab3c-d52691b4dbfc