Source/WebCore/PAL/pal/Logging.cpp
@@ -26,10 +26,6 @@
 #include "config.h"
 #include "Logging.h"
 
-#include "LogInitialization.h"
-
-#include <wtf/StdLibExtras.h>
-#include <wtf/text/CString.h>
 #include <wtf/text/WTFString.h>
 
 #if PLATFORM(COCOA)
@@ -38,50 +34,6 @@
 #endif
 
 namespace PAL {
-
-#if !LOG_DISABLED || !RELEASE_LOG_DISABLED
-
-#define DEFINE_PAL_LOG_CHANNEL(name) DEFINE_LOG_CHANNEL(name, LOG_CHANNEL_WEBKIT_SUBSYSTEM)
-PAL_LOG_CHANNELS(DEFINE_PAL_LOG_CHANNEL)
-
-static WTFLogChannel* logChannels[] = {
-    PAL_LOG_CHANNELS(LOG_CHANNEL_ADDRESS)
-};
-
-static const size_t logChannelCount = WTF_ARRAY_LENGTH(logChannels);
-
-bool isLogChannelEnabled(const String& name)
-{
-    WTFLogChannel* channel = WTFLogChannelByName(logChannels, logChannelCount, name.utf8().data());
-    if (!channel)
-        return false;
-    return channel->state != WTFLogChannelOff;
-}
-
-static bool logChannelsNeedInitialization = true;
-
-void setLogChannelToAccumulate(const String& name)
-{
-    WTFLogChannel* channel = WTFLogChannelByName(logChannels, logChannelCount, name.utf8().data());
-    if (!channel)
-        return;
-
-    channel->state = WTFLogChannelOnWithAccumulation;
-    logChannelsNeedInitialization = true;
-}
-
-void initializeLogChannelsIfNecessary(std::optional<String> logChannelString)
-{
-    if (!logChannelsNeedInitialization && !logChannelString)
-        return;
-
-    logChannelsNeedInitialization = false;
-
-    String enabledChannelsString = logChannelString ? logChannelString.value() : logLevelString();
-    WTFInitializeLogChannelStatesFromString(logChannels, logChannelCount, enabledChannelsString.utf8().data());
-}
-
-#endif // !LOG_DISABLED || !RELEASE_LOG_DISABLED
 
 void registerNotifyCallback(const String& notifyID, WTF::Function<void()>&& callback)
 {
@@ -97,4 +49,3 @@ void registerNotifyCallback(const String& notifyID, WTF::Function<void()>&& call
 }
 
 } // namespace WebCore
-
